--- a/projects/rilke-ui/src/lib/components/dialog/dialog.component.html
+++ b/projects/rilke-ui/src/lib/components/dialog/dialog.component.html
@@ -3,12 +3,9 @@
 </div>
 
 <ng-container *ngIf="data.form">
-	<form class="pt-5" [formGroup]="data.form">
+	<form class="pt-1 pb-4" [formGroup]="data.form">
 		<ng-container *ngFor="let control of formArray; let i = index">
-			<ril-form-group [float]="true">
-				<ril-form-label>{{ control }}</ril-form-label>
-				<ril-input></ril-input>
-			</ril-form-group>
+			<ril-input [formControlName]="control[0]"></ril-input>
 		</ng-container>
 	</form>
 </ng-container>
