--- a/projects/rilke-ui/src/assets/style/styles.scss
+++ b/projects/rilke-ui/src/assets/style/styles.scss
@@ -37,7 +37,7 @@ $rilke-ui-theme: mat.define-light-theme(
 
 html {
 	display: block;
-	height: 100%;
+	scroll-behavior: smooth;
 	font-family: $f-family;
 	color: main-contrast(800);
 	font-weight: $f-weight-md;
