--- a/projects/rilke-ui/src/lib/components/rich-text/editor-toolbar/editor-toolbar.component.scss
+++ b/projects/rilke-ui/src/lib/components/rich-text/editor-toolbar/editor-toolbar.component.scss
@@ -10,12 +10,15 @@ ril-editor-toolbar {
 
 	.toolbar {
 		display: flex;
+		flex-wrap: wrap;
 		width: 100%;
+		margin-top: -$m-xs;
 
 		.set {
 			display: flex;
 			align-items: center;
 			background-color: main-palette(700);
+			margin-top: $m-xs;
 
 			button {
 				border: none;
@@ -26,6 +29,7 @@ ril-editor-toolbar {
 				background: transparent;
 				cursor: pointer;
 				white-space: normal;
+				border-radius: $r-xs;
 				padding: math.div($p-md, 5);
 				color: main-contrast(800);
 
@@ -36,7 +40,21 @@ ril-editor-toolbar {
 			}
 
 			+ .set {
-				margin-left: $m-md;
+				margin-left: $m-xs;
+			}
+
+			.color {
+				ril-color-picker {
+					.wrapper {
+						span {
+							display: none;
+						}
+					}
+				}
+
+				+ .color {
+					padding-left: $p-xs;
+				}
 			}
 		}
 	}
