File Upload Support Url

--- a/projects/rilke-ui/src/lib/components/menu/item/item.component.scss
+++ b/projects/rilke-ui/src/lib/components/menu/item/item.component.scss
@@ -12,7 +12,7 @@ ril-menu-item {
 	}
 
 	button {
-		color: main-contrast(800);
+		color: main-contrast(800) !important;
 
 		&:hover {
 			background: main-palette(700);
