--- a/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/rilke-ui/src/lib/components/file-upload/file-upload.component.html
@@ -5,17 +5,37 @@
 			<p>{{ lang.common.select_file }}</p>
 		</ng-container>
 
-		<img *ngIf="value && isImage" [src]="value.base64" alt="" />
-		<span *ngIf="value && !isImage" class="file-icon material-icons">insert_drive_file</span>
-		<P class="file-name" ril-truncate *ngIf="value">{{ value.name }}</P>
-		<div class="close-icon" *ngIf="value">
-			<span
-				stop-propagation
-				*ngIf="value"
-				class="material-icons"
-				(click)="cancelFile()"
-				>cancel</span>
-		</div>
+		<ng-container *ngIf="value && !isUrl">
+			<img *ngIf="isImage" [src]="value.base64" alt="" />
+			<span *ngIf="!isImage" class="file-icon material-icons"
+				>insert_drive_file</span
+			>
+			<P class="file-name" ril-truncate>{{ value.name }}</P>
+			<div class="close-icon">
+				<span
+					stop-propagation
+					class="material-icons"
+					(click)="cancelFile()"
+					>cancel</span
+				>
+			</div>
+		</ng-container>
+
+		<ng-container *ngIf="value && isUrl">
+			<img *ngIf="isImage" [src]="value" alt="" />
+			<span *ngIf="!isImage" class="file-icon material-icons"
+				>insert_drive_file</span
+			>
+			<P class="file-name" ril-truncate>unkown</P>
+			<div class="close-icon">
+				<span
+					stop-propagation
+					class="material-icons"
+					(click)="cancelFile()"
+					>cancel</span
+				>
+			</div>
+		</ng-container>
 
 		<input
 			type="file"
